try to fix color on mobile menu icon

--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,7 @@ body {
 
 .mobile-menu-icon {
   display: none;
+  color: #FFFFFF;
 }
 
 .contact-person {
